added grpc setup

--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@bufbuild/protobuf": "^2.9.0",
+    "@grpc/grpc-js": "^1.14.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mom-protos": "^1.0.10",
     "mongoose": "^8.19.0",
     "nodemailer": "^7.0.7",
     "redis": "^5.8.3",
